# speedtest-framework

./: .gitignore  CMakeLists.txt  README.md
include/: argparse.h  speed.h  speedtester.h  sys_random.h  test_include.h
include/test/: aes_test.h
speed/: aes_test.c  argparse.c  speed.c  speedtester.c  speedtester_linux.c  sys_random.c
